--- a/src/bin/CMakeLists.txt
+++ b/src/bin/CMakeLists.txt
@@ -1,6 +1,6 @@
 function(tlct_add_executable name srcs)
     add_executable(${name} ${srcs})
-    target_link_libraries(${name} PRIVATE tlct::lib)
+    target_link_libraries(${name} PRIVATE tlct::lib::dynamic)
 
     if (TLCT_ENABLE_LTO)
         set_target_properties(${name} PROPERTIES
