--- a/src/bin/CMakeLists.txt
+++ b/src/bin/CMakeLists.txt
@@ -8,6 +8,13 @@ function(tlct_add_executable name srcs)
         )
     endif ()
 
+    if (MSVC)
+        set_target_properties(${name} PROPERTIES
+                MSVC_RUNTIME_LIBRARY ${_TLCT_MSVC_RUNTIME_LIBRARY}
+        )
+        target_compile_definitions(${name} PRIVATE "_CRT_SECURE_NO_WARNINGS")
+    endif ()
+
     copy_dlls_if_needed(${name})
 endfunction()
 
