chore: some refinement

--- a/src/bin/CMakeLists.txt
+++ b/src/bin/CMakeLists.txt
@@ -12,10 +12,9 @@ function(tlct_add_executable name srcs)
         set_target_properties(${name} PROPERTIES
                 MSVC_RUNTIME_LIBRARY ${_TLCT_MSVC_RUNTIME_LIBRARY}
         )
-        target_compile_definitions(${name} PRIVATE "_CRT_SECURE_NO_WARNINGS")
     endif ()
 
-    copy_dlls_if_needed(${name})
+    tlct_copy_dlls_if_needed(${name})
 endfunction()
 
 tlct_add_executable(tlct-bin "main.cpp")
