feat: show source info in err msg

--- a/src/include/tlct/common/config.h.in
+++ b/src/include/tlct/common/config.h.in
@@ -2,3 +2,4 @@
 
 #cmakedefine TLCT_VERSION "@TLCT_VERSION@"
 #cmakedefine TLCT_COMPILE_INFO "@TLCT_COMPILE_INFO@"
+#cmakedefine TLCT_INCLUDE_BASE "@TLCT_INCLUDE_BASE@"
