--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -24,6 +24,14 @@ function(tlct_common_lib_setting name)
         target_compile_options(${name} ${__PUB_DEP_SCOPE} -mavx2)
     endif ()
 
+    if (TLCT_ENABLE_FAST_MATH)
+        if (MSVC)
+            target_compile_options(${name} ${__PUB_DEP_SCOPE} /fp:fast)
+        else ()
+            target_compile_options(${name} ${__PUB_DEP_SCOPE} -ffast-math)
+        endif ()
+    endif ()
+
     if (TLCT_VERBOSE_WARNING)
         if (MSVC)
             target_compile_options(${name} ${__PUB_DEP_SCOPE} /W4)
